Adjust container size

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             text-align: center;
             font-size: 20px;
             margin: 15px 0;
-            width: 577px;
+            width: 540px;
             border-radius: 5px;
         }
         .word-container {
@@ -65,8 +65,8 @@
             background-color: white;
             margin: 15px 0;
             border: 2px solid #000;
-            width: 577px;
-            height: 354px;
+            width: 565px;
+            height: 220px;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
@@ -137,7 +137,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            width: 577px;
+            width: 565px;
             margin: 15px 0;
         }
         .overview-container {
@@ -150,7 +150,7 @@
         .overview-controls {
             text-align: center;
             margin-bottom: 20px;
-            width: 577px;
+            width: 565px;
             margin-left: auto;
             margin-right: auto;
         }
@@ -252,9 +252,14 @@
                 width: 100%;
                 padding: 10px;
             }
-            .theme-container, .word-container, .container, .overview-controls {
+            .theme-container {
                 width: 100%;
-                max-width: 577px;
+                max-width: 540px;
+                margin: 10px auto;
+            }
+            .word-container, .container, .overview-controls {
+                width: 100%;
+                max-width: 565px;
                 margin: 10px auto;
             }
             .word {
