Adjust size for mobile devices

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             margin: 15px 0;
             border: 2px solid #000;
             width: 565px;
-            height: 220px;
+            height: 354px;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
@@ -254,10 +254,16 @@
             }
             .theme-container {
                 width: 100%;
-                max-width: 540px;
+                max-width: 350px;
                 margin: 10px auto;
             }
-            .word-container, .container, .overview-controls {
+            .word-container {
+                width: 100%;
+                max-width: 565px;
+                height: 160px;
+                margin: 10px auto;
+            }
+            .container, .overview-controls {
                 width: 100%;
                 max-width: 565px;
                 margin: 10px auto;
