Add help for iPhone

--- a/index.html
+++ b/index.html
@@ -307,6 +307,9 @@
         <div class="overview-controls">
             <div class="voice-row">
                 <select id="voice-select" onchange="updateVoice(this.value)"></select>
+                <div class="help-text">
+                    使用 iPhone / iOS 裝置時，手動選擇 Anna (de-DE)。
+                </div>
             </div>
             <div class="slider-container">
                 <label>語速 (Rate): <span id="rate-value">0.9</span></label>
